projects/compiler/test/typechecker/enumdecl/error_trait_impl_duplicate.abra
trait Foo {}
enum Bar : Foo, Foo {}

// A trait is considered duplicated regardless of the provided generics
trait Foo2<A> {}
enum Bar2 : Foo2<Int>, Foo2<Float> {}